# FRIEND

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  extensions.py  routes.py  services.py
app/templates/: base.html  dashboard.html  index.html  login.html  register.html
tests/: conftest.py  test_ai.py  test_email.py  test_factory.py  test_routes.py  test_services.py
