[tool.poetry]
name = "friend"
version = "0.1.0"
description = "A minimal, warm email service."
authors = ["Burhanuddin <Burhanuddin122001@gmail.com>"]
readme = "README.md"
package-mode = false  # <--- ADD THIS LINE


[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
python-dotenv = "^1.0.0"
supabase = "^2.27.2"
requests = "^2.32.5"
types-requests = "^2.32.4.20260107"
resend = "^2.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# --- Tool Configurations ---

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
